--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
     <!-- ======================== Main container for Play, About and Locked button ======================== -->
     <section id="section">
         <div class="container">
-            <a id="playBtn" class="button" href="Michael's Minigames/MiniGame1/index.html"> Play</a> 
+            <a id="playBtn" class="button" href="/Ahmed's Minigames/minigameOne.html"> Play</a> 
             <button id="lockBtn" class="button"> Locked </button>
             <button id="aboutBtn" class="button"> About </button>
             <audio src="William's Minigames/Assets/buttonSound1.mp3" id="audio1"></audio>
